# pytch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytch.py  setup.py
pytch/: pytch.py
src/pytch/: __init__.py  __main__.py  art.py  funcs.py
src/pytch_fetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
