[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyftch"
version = "1.0.1"
description = "A lightweight and elegant fetch for Linux written in Python with no dependencies."
readme = "README.md"
authors = [{ name = "Krit Dass", email = "dasskrit@gmail.com" }]
maintainers = [{ name = "Krit Dass", email = "dasskrit@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Terminals",
]
keywords = ["linux", "fetch", "terminal"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/kritdass/pyftch"
Repository = "https://github.com/kritdass/pyftch"

[project.scripts]
pyftch = "pyftch.__main__:main"
