[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytch-fetch"
version = "1.2.0"
description="Pytch Yields Technical Characteristics Hastily"
readme = "README.md"
authors = [{ name = "Krit Dass", email = "dasskrit@gmail.com" }]
maintainers = [{ name = "Krit Dass", email = "dasskrit@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: BSD :: FreeBSD",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Terminals",
]
keywords = ["linux", "fetch", "terminal"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/kritdass/pytch"
Repository = "https://github.com/kritdass/pytch"

[project.scripts]
pytch = "pytch.__main__:main"
